2005-12-03  Nicolas Geoffray  <nicolas.geoffray@menlina.com>
	* java/lang/instrument: New directory.
	* java/lang/instrument/ClassDefinition.java:
	New file.
	* java/lang/instrument/ClassFileTransformer.java:
	New file.
	* java/lang/instrument/IllegalClassFormatException.java:
	New file.
	* java/lang/instrument/Instrumentation.java:
	New file.
	* java/lang/instrument/UnmodifiableClassException.java:
	New file.
	* java/lang/InstrumentationImpl.java:
	New file.
	* vm/reference/java/lang/VMInstrumentationImpl.java:
	New file. 

2005-12-02  Tom Tromey  <tromey@redhat.com>

	* javax/sound/sampled/Port.java (Info): Genericized.
	* javax/sound/sampled/Line.java (Info): Genericized.
	(getLineClass): Likewise.
	* javax/sound/sampled/DataLine.java (Info): Genericized.
	* javax/sound/sampled/AudioFormat.java (AudioFormat): Genericized.
	(properties): Likewise.
	* javax/sound/sampled/AudioFileFormat.java (AudioFileFormat):
	Genericized.
	(properties): Likewise.

2005-12-02  Tom Tromey  <tromey@redhat.com>

	* javax/naming/directory/InitialDirContext.java (search): Genericized.
	* javax/naming/directory/BasicAttributes.java (getAll): Genericized.
	(getIDs): Likewise.
	* javax/naming/directory/BasicAttribute.java (getAll): Fixed return
	type.
	* javax/naming/InitialContext.java: Genericized.
	(list): Likewise.
	(listBindings): Likewise.
	* javax/naming/CompoundName.java (getAll): Genericized.
	* javax/naming/CompositeName.java (getAll): Genericized.

2005-12-01  Tom Tromey  <tromey@redhat.com>

	* javax/imageio/spi/RegisterableService.java (onRegistration):
	Genericized.
	(onDeregistration): Likewise.
	* javax/imageio/spi/ServiceRegistry.java (ServiceRegistry):
	Genericized.
	(deregisterServiceProvider): Likewise.
	(getCategories): Likewise.
	(getServiceProviderByClass): Likewise.
	(getServiceProviders): Likewise.
	(lookupProviders): Likewise.
	(registerServiceProvider): Likewise.
	(registerServiceProviders): Likewise.
	(setOrdering): Likewise.
	(unsetOrdering): Likewise.